[gd_scene load_steps=33 format=2]

[ext_resource path="res://LevelScenes/Level1.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Concepts.ogg" type="AudioStream" id=3]
[ext_resource path="res://LevelAssets/Platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://LevelAssets/Camera2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://LevelAssets/BossPortal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/level_background.png" type="Texture" id=8]
[ext_resource path="res://Assets/Cactus.png" type="Texture" id=9]
[ext_resource path="res://Assets/CactusCowboyHat.png" type="Texture" id=10]
[ext_resource path="res://Assets/boss_sign.png" type="Texture" id=11]
[ext_resource path="res://Assets/TutorialKeyD.png" type="Texture" id=12]
[ext_resource path="res://Assets/TutorialKeyW.png" type="Texture" id=13]
[ext_resource path="res://Assets/TutorialSpaceKey.png" type="Texture" id=14]
[ext_resource path="res://Assets/TutorialArrowKeys.png" type="Texture" id=15]
[ext_resource path="res://Assets/TutorialLeftClick.png" type="Texture" id=16]
[ext_resource path="res://Assets/TutorialKeyA.png" type="Texture" id=17]
[ext_resource path="res://LevelScenes/Tutorials.gd" type="Script" id=18]
[ext_resource path="res://LevelAssets/PlayerHealthBar.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/tileset.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 51.25 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=7]
2/name = "tileset.png 2"
2/texture = ExtResource( 20 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileset.png 3"
3/texture = ExtResource( 20 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tileset.png 4"
4/texture = ExtResource( 20 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
11/name = "tileset.png 11"
11/texture = ExtResource( 20 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 192, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 9 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "tileset.png 12"
12/texture = ExtResource( 20 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 256, 0, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 10 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "tileset.png 13"
13/texture = ExtResource( 20 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 64, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 11 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "tileset.png 14"
14/texture = ExtResource( 20 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 64, 64, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 12 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "tileset.png 15"
15/texture = ExtResource( 20 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 128, 64, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 13 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0
16/name = "tileset.png 16"
16/texture = ExtResource( 20 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 192, 64, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape = SubResource( 14 )
16/shape_one_way = false
16/shape_one_way_margin = 1.0
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0
17/name = "tileset.png 17"
17/texture = ExtResource( 20 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 256, 64, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape = SubResource( 15 )
17/shape_one_way = false
17/shape_one_way_margin = 1.0
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "tileset.png 18"
18/texture = ExtResource( 20 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 128, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "tileset.png 19"
19/texture = ExtResource( 20 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 64, 128, 64, 64 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "tileset.png 20"
20/texture = ExtResource( 20 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 128, 128, 64, 64 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "tileset.png 21"
21/texture = ExtResource( 20 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 192, 128, 64, 64 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "tileset.png 22"
22/texture = ExtResource( 20 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 256, 128, 64, 64 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "tileset.png 23"
23/texture = ExtResource( 20 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 0, 192, 64, 64 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0

[node name="Level1" type="Node2D"]
position = Vector2( 1, -2 )
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 417, 61 )
scale = Vector2( 0.290926, 0.29765 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 3500, 766 )

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 161, 118 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( 1, -7 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 2000, 248 )

[node name="Tutorials" type="Node" parent="."]
script = ExtResource( 18 )

[node name="MovementA" type="Sprite" parent="Tutorials"]
position = Vector2( 39, 107 )
texture = ExtResource( 17 )

[node name="MovementD" type="Sprite" parent="Tutorials"]
position = Vector2( 76, 107 )
texture = ExtResource( 12 )

[node name="JumpW" type="Sprite" parent="Tutorials"]
visible = false
position = Vector2( 247, 92 )
texture = ExtResource( 13 )

[node name="JumpSpace" type="Sprite" parent="Tutorials"]
visible = false
position = Vector2( 303, 92 )
texture = ExtResource( 14 )

[node name="ShootLeftClick" type="Sprite" parent="Tutorials"]
visible = false
position = Vector2( 534, 52 )
texture = ExtResource( 16 )

[node name="ShootArrowKeys" type="Sprite" parent="Tutorials"]
visible = false
position = Vector2( 586, 53 )
texture = ExtResource( 15 )

[node name="JumpTutorialTrigger" type="Area2D" parent="Tutorials"]
position = Vector2( 203, 119 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorials/JumpTutorialTrigger"]
visible = false
position = Vector2( -44, 0 )
shape = SubResource( 1 )

[node name="ShootTutorialTrigger" type="Area2D" parent="Tutorials"]
position = Vector2( 413, 135 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorials/ShootTutorialTrigger"]
position = Vector2( -7, -60 )
shape = SubResource( 1 )

[node name="Cactus" type="Sprite" parent="."]
position = Vector2( 110, 138 )
scale = Vector2( 0.734375, 0.734375 )
texture = ExtResource( 9 )

[node name="Cactus4" type="Sprite" parent="."]
position = Vector2( 222, 147 )
scale = Vector2( 0.507813, 0.476562 )
texture = ExtResource( 9 )
flip_h = true

[node name="Cactus2" type="Sprite" parent="."]
position = Vector2( 295, 109 )
texture = ExtResource( 9 )
offset = Vector2( 66, -9 )

[node name="Cactus3" type="Sprite" parent="."]
position = Vector2( 739, 106 )
scale = Vector2( 0.773438, 0.765625 )
texture = ExtResource( 9 )
offset = Vector2( -7.75775, 0 )
flip_h = true

[node name="Cactus5" type="Sprite" parent="."]
position = Vector2( 1430, 136 )
scale = Vector2( 0.79349, 0.77754 )
texture = ExtResource( 9 )
offset = Vector2( -7.75775, 0 )
flip_h = true

[node name="CactusCowboyHat" type="Sprite" parent="."]
position = Vector2( 1006, 122 )
scale = Vector2( 0.859375, 0.84375 )
texture = ExtResource( 10 )

[node name="BossSign" type="Sprite" parent="."]
position = Vector2( 1876, 115 )
scale = Vector2( 0.40625, 0.421874 )
texture = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 62, 147 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
position = Vector2( 99, -29 )
remote_path = NodePath("../../Camera2D")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 7 )
show_collision = true
collision_layer = 3
format = 1
tile_data = PoolIntArray( 196624, 2, 0, 196625, 3, 0, 196626, 12, 0, 262152, 5, 0, 262153, 6, 0, 262154, 2, 0, 262155, 3, 0, 262156, 4, 0, 262157, 11, 0, 262158, 3, 0, 262159, 4, 0, 262160, 11, 0, 262161, 3, 0, 262162, 4, 0, 262163, 11, 0, 262164, 3, 0, 262165, 4, 0, 262166, 11, 0, 262167, 12, 0, 262202, 13, 0, 262203, 14, 0, 262204, 15, 0, 262205, 16, 0, 262206, 14, 0, 327680, 16, 0, 327681, 14, 0, 327682, 15, 0, 327683, 16, 0, 327684, 14, 0, 327685, 16, 0, 327686, 14, 0, 327687, 15, 0, 327688, 16, 0, 327689, 14, 0, 327690, 14, 0, 327691, 15, 0, 327692, 15, 0, 327693, 14, 0, 327694, 15, 0, 327695, 16, 0, 327696, 16, 0, 327697, 15, 0, 327698, 16, 0, 327699, 15, 0, 327700, 14, 0, 327701, 16, 0, 327702, 15, 0, 327703, 16, 0, 327704, 14, 0, 327705, 15, 0, 327706, 16, 0, 327707, 17, 0, 327723, 2, 0, 327724, 3, 0, 327725, 4, 0, 327726, 12, 0, 327738, 18, 0, 327739, 19, 0, 327740, 20, 0, 327741, 21, 0, 327742, 22, 0, 393216, 18, 0, 393217, 19, 0, 393218, 20, 0, 393219, 18, 0, 393220, 22, 0, 393221, 21, 0, 393222, 20, 0, 393223, 22, 0, 393224, 21, 0, 393225, 22, 0, 393226, 20, 0, 393227, 22, 0, 393228, 20, 0, 393229, 22, 0, 393230, 20, 0, 393231, 21, 0, 393232, 21, 0, 393233, 22, 0, 393234, 21, 0, 393235, 19, 0, 393236, 20, 0, 393237, 18, 0, 393238, 19, 0, 393239, 20, 0, 393240, 19, 0, 393241, 20, 0, 393242, 18, 0, 393243, 19, 0, 393259, 23, 0, 393260, 23, 0, 393261, 23, 0, 393262, 23, 0, 393265, 2, 0, 393266, 3, 0, 393267, 4, 0, 393268, 12, 0, 393274, 23, 0, 393275, 23, 0, 393276, 23, 0, 393277, 23, 0, 393278, 23, 0, 458795, 23, 0, 458796, 23, 0, 458797, 23, 0, 458798, 23, 0, 458801, 23, 0, 458802, 23, 0, 458803, 23, 0, 458804, 23, 0, 458810, 23, 0, 458811, 23, 0, 458812, 23, 0, 458813, 23, 0, 458814, 23, 0 )

[node name="Platform20" parent="." instance=ExtResource( 4 )]
position = Vector2( 976, 154 )

[node name="Platform21" parent="." instance=ExtResource( 4 )]
position = Vector2( 1031, 154 )

[node name="Platform22" parent="." instance=ExtResource( 4 )]
position = Vector2( 1128, 118 )

[node name="Platform24" parent="." instance=ExtResource( 4 )]
position = Vector2( 1223, 116 )

[node name="Platform25" parent="." instance=ExtResource( 4 )]
position = Vector2( 1315, 149 )

[node name="Platform26" parent="." instance=ExtResource( 4 )]
position = Vector2( 1752, 180 )

[node name="Enemy" parent="." instance=ExtResource( 7 )]
position = Vector2( 651, 111 )

[node name="Enemy2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1114, 91 )

[node name="Enemy3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1640, 177 )

[node name="Enemy4" parent="." instance=ExtResource( 7 )]
position = Vector2( 1730, 154 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -14.857
autoplay = true

[node name="BossPortal" parent="." instance=ExtResource( 6 )]
position = Vector2( 1957, 158 )
collision_layer = 5
collision_mask = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 35

[node name="PlayerHealthBar" parent="CanvasLayer" instance=ExtResource( 19 )]

[connection signal="area_entered" from="Tutorials/JumpTutorialTrigger" to="Tutorials" method="_on_JumpTutorialTrigger_area_entered"]
[connection signal="area_entered" from="Tutorials/ShootTutorialTrigger" to="Tutorials" method="_on_ShootTutorialTrigger_area_entered"]

[editable path="Camera2D"]
